--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -305,7 +305,7 @@ $ git push</pre>
 Server hostname: {{ hostname }}
 Database server: {{ database.engine }} ({{ database.url }})
 {% if database.is_sqlite %}<span class="warning">Data persistence warning: You are currently using SQLite. This is fine for development, but your data won't be persisted across application deployments.</span>{% endif %}
-Page views: {{ count }}
+Page views: {{ count }} .. {{ name }}
 </pre>
 
           </section>
